Fix download of filenames with urlencoded entities in them by simply using the entry ID for downloading

--- a/.htaccess
+++ b/.htaccess
@@ -17,7 +17,7 @@ RewriteRule ^fileupload$ index.php?fileupload [L]
 RewriteRule ^login$ index.php?login [L]
 RewriteRule ^logout$ index.php?login&logout [L]
 RewriteRule ^pack/(\d+)$ index.php?getpack=$1 [L]
-RewriteRule ^pack/(\d+)/(.+) index.php?getpack=$1&file=$2 [L]
+RewriteRule ^file/(\d+)$ index.php?getfile=$1 [L]
 RewriteRule ^results/(\d+)\.txt$ index.php?getresults=$1 [L]
 RewriteRule ^compo/(\d+)$ index.php?getcompo=$1 [L]
 RewriteRule ^ping$ index.php?uploadping [L]
